<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:padding="24dp"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/create_new_account"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_marginTop="50dp"
            android:layout_width="100dp"
            android:layout_height="100dp">

            <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/imageProfile"
                android:background="@color/transparent_gray"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/profile" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/ic_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:labelFor="@id/inputName"
                android:id="@+id/inputName"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:labelFor="@id/inputEmail"
                android:id="@+id/inputEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:labelFor="@id/inputPassword"
                android:id="@+id/inputPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:labelFor="@id/inputConfirmPassword"
                android:id="@+id/inputConfirmPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonSignUp"
                android:text="@string/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/buttonAlreadyHaveAccount"
            android:layout_marginTop="15dp"
            android:text="@string/already_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>