<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/welcome_back"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="15sp"
            android:text="@string/login_to_continue"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:labelFor="@id/inputEmail"
                android:id="@+id/inputEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:labelFor="@id/inputPassword"
                android:id="@+id/inputPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonSignIn"
                android:text="@string/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/buttonCreateNewAccount"
            android:layout_marginTop="15dp"
            android:text="@string/create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>