<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.ChatActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        app:riv_corner_radius="30dip"
        app:riv_mutate_background="true"
        app:riv_oval="true"
        android:background="@color/transparent_gray"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:id="@+id/imageBack"
        android:src="@drawable/ic_back"
        android:padding="6dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/profile" />

    <com.makeramen.roundedimageview.RoundedImageView
        app:riv_corner_radius="30dip"
        app:riv_mutate_background="true"
        app:riv_oval="true"
        android:background="@color/transparent_gray"
        android:padding="6dp"
        android:src="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:id="@+id/imageInfo"
        android:layout_width="30dp"
        android:layout_height="30dp"/>

    <TextView
        android:gravity="center"
        android:id="@+id/textName"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageBack"
        app:layout_constraintEnd_toStartOf="@id/imageInfo"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack"
        android:layout_margin="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/online"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        android:id="@+id/textAvailability"
        app:layout_constraintTop_toBottomOf="@+id/imageBack"
        android:background="#008000"
        android:textColor="@color/white"
        android:padding="2dp"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:id="@+id/chatRecycleView"
        app:stackFromEnd="true"
        app:layout_constraintBottom_toTopOf="@id/layoutInputMessage"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/textAvailability"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <ProgressBar
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/fabSend"
        android:src="@drawable/ic_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/send" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fabSend"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:imeOptions="actionDone"
            android:hint="@string/type_a_message"
            android:id="@+id/inputMessage"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>